--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         </button>
                         <p class="text-center mt-4 text-gray-600">
                             Having trouble? 
-                            <a href="https://forms.google.com/your-backup-form-url" target="_blank" class="text-secondary-color hover:underline">
+                            <a href="https://forms.gle/5HTR5s5vkqZb24J86" target="_blank" class="text-secondary-color hover:underline">
                                 Fill out our Google Form instead
                             </a>
                         </p>
