--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
     <!-- WhatsApp Group Section -->
     <section id="whatsapp" class="py-16 bg-accent-color">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-3xl font-bold text-primary-color mb-6">Join Our Arratai Community</h2>
+            <h2 class="text-3xl font-bold text-primary-color mb-6">Join Our Arattai - Community</h2>
             <p class="text-xl text-gray-700 mb-8">Get instant job updates and connect with fellow tech enthusiasts</p>
             <a href="https://chat.arattai.in/groups/z43545f313238383631373235303437323632313138335f32303031393031373639322d47437c3031303131353033303034323137363134353134393034323130" target="_blank" class="inline-flex items-center px-8 py-4 bg-green-500 text-white rounded-full hover:bg-green-600 transition duration-300">
                 <i data-lucide="message-circle" class="w-6 h-6 mr-2"></i>
-                Join Arratai Group
+                Join Arattai Group
             </a>
         </div>
     </section>
