--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     UNLOCK YOUR FUTURE
                 </h1>
                 <p class="mt-3 text-base sm:text-lg md:text-xl font-light text-gray-200 sm:mt-5">
-                    Build Your Own Career Path: Earnings & Learning with New Trends.
+                    Build Your Own Career Path: Learnings & Earnings with New AI Trends.
                 </p>
             </div>
             
