--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <!-- Age -->
                     <div>
                         <label for="age" class="block text-lg font-medium text-gray-700 mb-2">Age (वय) <span class="text-red-500">*</span></label>
-                        <input type="number" id="age" name="age" placeholder="18" class="form-input" required min="18" max="99">
+                        <input type="number" id="age" name="age" placeholder="18" class="form-input" max="99">
                     </div>
 
                     <!-- Education / Qualification -->
@@ -168,7 +168,7 @@
                     <!-- Expected Package -->
                     <div>
                         <label for="expectedPackage" class="block text-lg font-medium text-gray-700 mb-2">Expected Package / Earnings (अपेक्षित पगार / उत्पन्न) <br> What salary range or income level are you aiming for in the next 2–3 years? <span class="text-red-500">*</span></label>
-                        <input type="expectedPackage" id="expectedPackage" name="expectedPackage" placeholder="3 LPA" class="form-input" required min="18" max="10">
+                        <input type="expectedPackage" id="expectedPackage" name="expectedPackage" placeholder="3 LPA" class="form-input"  max="10">
                     </div>
 
                     <!-- Consultation Type -->
