--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
     <section id="connect" class="py-16 bg-accent-color">
         <h2 class="text-4xl font-extrabold text-gray-900 text-center mb-8 animate-fade-in">Connect With Us</h2>
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p class="text-lg text-gray-700 mb-8">Join our channels for job alerts, events and mentor sessions.</p>
-
+            <i data-lucide="linkedin" class="w-5 h-5"></i>
+            <p class="text-lg text-gray-700 mb-8">Stay connected! Join our community for job alerts and future communications.</p>
             <div class="connect-cards">
                 <!-- WhatsApp Card -->
                 <div class="connect-card">
