Adjust layout and add LinkedIn connection link
Updated header and services section padding, added LinkedIn link.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <!-- Header & Hero Section -->
-    <header class="hero-bg text-white pt-16 pb-20 shadow-xl">
+    <header class="hero-bg text-white pt-1 pb-8 shadow-xl">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <!-- Logo/Branding Area -->
             <div class="flex flex-col items-center mb-3">
@@ -39,7 +39,7 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services" class="py-20 bg-white">
+    <section id="services" class="py-10 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-4xl font-extrabold text-gray-900 text-center mb-12">
                 Our Pathways to Success
@@ -268,7 +268,9 @@
         <h2 class="text-4xl font-extrabold text-gray-900 text-center mb-8 animate-fade-in">Connect With Us</h2>
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
 
-            <p class="flex justify-center"> <i data-lucide="linkedin" class="w-7 h-7"> </i> </p>
+            <a href="https://www.linkedin.com/in/360techmentor/" target="_blank" class="text-blue-600 hover:text-blue-800">
+                                <i data-lucide="linkedin" class="w-5 h-5"></i>
+                            </a>
 
             <p class="text-lg text-gray-700 mb-8">Stay connected! Join our community for job alerts and future communications.</p>
             <div class="connect-cards">
