Update Arattai links and labels in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="hero-bg text-white pt-1 pb-8 shadow-xl">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <!-- Logo/Branding Area -->
-            <div class="flex flex-col items-center mb-3">
+            <div class="flex flex-col items-center mb-1">
                 <img src="/Final Logo Techmentor.png" alt="360 Tech Mentor Logo" class="logo-img rounded-lg mb-0 hover:scale-105 transition-transform duration-300">
             </div>
 
@@ -302,12 +302,12 @@
                             <!-- <i data-lucide="users" class="w-5 h-5"></i> -->
                             <img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Arattai_logo.png" alt="WhatsApp" onerror="this.style.display='none'" class="mx-auto">
 
-                            <span>Arattai Community</span>
+                            <span>Community</span>
                         </a>
                         <a href="https://chat.arattai.in/groups/z43545f313238383631373235303437323632313138335f32303031393031373639322d47437c3031303131353033303034323137363134353134393034323130" target="_blank" class="channel-btn btn-arattai-alert" aria-label="Arattai Job Alerts">
                             <!-- <i data-lucide="bell" class="w-5 h-5"></i> -->
                             <img src="https://upload.wikimedia.org/wikipedia/commons/f/ff/Arattai_logo.png" alt="WhatsApp" onerror="this.style.display='none'" class="mx-auto">
-                            <span>Arattai Job Alerts</span>
+                            <span>Job Alerts</span>
                         </a>
                     </div>
                 </div>
