--- a/index.html
+++ b/index.html
@@ -260,12 +260,11 @@
                 By submitting this form, you consent to the collection and use
                 of your information solely for your career enhancement and
                 mentorship purposes. Please review our
-                <a href="#" id="tnc-link" class="text-blue-600 hover:underline font-medium">Terms and Conditions</a>
+                <a href="#"  class="tnc-link-trigger text-blue-600 hover:underline font-medium">Terms and Conditions</a>
 
                 before submitting.
               </label>
             </div>
-
             <button type="submit" id="submit-btn"
               class="w-full mt-6 px-6 py-3 text-lg font-bold rounded-lg bg-primary-color text-white hover:bg-blue-800 transition duration-300 transform hover:scale-105 shadow-xl">
               Submit & Unlock My Future
@@ -281,6 +280,7 @@
           <p class="text-center text-red-500 mb-4 font-semibold text-lg" id="status-message"></p>
         </form>
 
+        <!-- success form -->
         <div id="success-modal" class="fixed inset-0 bg-gray-600 bg-opacity-75 hidden items-center justify-center z-50">
           <div class="bg-white rounded-lg shadow-2xl max-w-md mx-auto p-8 transform transition-all sm:w-full">
             <h2 class="text-2xl font-bold text-green-600 mb-4">Submission Successful! 🎉</h2>
@@ -479,15 +479,26 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-900 text-white py-8">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-      <p>
-        &copy; 2025 - 360 Tech Mentor. All rights reserved. | Empowering
-        Careers.
-      </p>
+  <!-- footer -->
+<footer class="bg-gray-900 text-white py-8">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center space-y-3">
+
+        <div class="text-sm text-gray-400">
+            <p class="mb-2">
+                Disclaimer: This site uses cookies and similar technologies to ensure essential website functionality, analytics, and personalization in compliance with Indian law. Manage your preferences or read our Cookie Policy.
+            </p>
+            <p>
+                Please review our 
+                <a href="#"  class=" tnc-link-trigger text-blue-600 hover:underline font-medium">Terms and Conditions</a>
+                
+            </p>
+        </div>
+
+        <p class="text-xs text-gray-500">
+            &copy; 2025 - 360 Tech Mentor. All rights reserved. | Empowering Careers.
+        </p>
     </div>
-  </footer>
+</footer>
 
   <!-- T&C -->
   <div id="tnc-modal" class="fixed inset-0 bg-gray-600 bg-opacity-75 hidden items-center justify-center z-[100]">
@@ -710,7 +721,6 @@
 
     </div>
   </div>
-
   <!-- Module script -->
   <script type="module" src="script.js">
   </script>
