--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@
         </form>
 
         <!-- success form -->
-        <div id="success-modal" class="fixed inset-0 bg-gray-600 bg-opacity-75 hidden items-center justify-center z-[100]">
-          <div class="bg-white rounded-lg shadow-2xl max-w-md mx-auto p-8 transform transition-all sm:w-full">
+        <div id="success-modal" class="fixed inset-0 bg-gray-600 bg-opacity-75  items-center justify-center z-[100]">
+          <div class="bg-white rounded-lg shadow-2xl max-w-sm mx-10 p-5 transform transition-all sm:w-full">
             <h2 class="text-2xl font-bold text-green-600 mb-4">Submission Successful! 🎉</h2>
 
             <p class="mb-3">
@@ -322,13 +322,13 @@
                   class="text-blue-600 hover:underline">360-tech-mentor.vercel.app</a>
               </p>
             </div>
-
             <button id="close-modal-btn"
               class="mt-6 w-full px-4 py-2 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition duration-150">
               Close & Continue
             </button>
           </div>
         </div>
+
       </div>
     </div>
   </section>
