--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </form>
 
         <!-- success form -->
-        <div id="success-modal" class="fixed inset-0 bg-gray-600 bg-opacity-75  items-center justify-center z-[100]">
+        <div id="success-modal" class="fixed inset-0 bg-gray-600 bg-opacity-75 hidden items-center justify-center z-[100]">
           <div class="bg-white rounded-lg shadow-2xl max-w-sm mx-auto p-5 transform transition-all sm:w-full">
             <h2 class="text-2xl font-bold text-green-600 mb-4">Submission Successful! 🎉</h2>
 
