--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
 
           <!-- Address -->
           <div>
-            <label for="Address" class="block text-lg font-medium text-gray-700 mb-2">What are you
+            <label for="address" class="block text-lg font-medium text-gray-700 mb-2">What are you
               Address (तुमचा पत्ता?)
               <span class="text-red-500">*</span></label>
-            <textarea id="Address" name="Address"
+            <textarea id="address" name="address"
               placeholder="e.g., Nandurbar, Pune etc."
               class="form-input min-h-[100px]" required></textarea>
           </div>
