--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
           </div>
 
           <!-- Address -->
-          <div>
+          <!-- <div>
             <label for="address" class="block text-lg font-medium text-gray-700 mb-2">What are you
               Address (तुमचा पत्ता?)
               <span class="text-red-500">*</span></label>
             <textarea id="address" name="address"
               placeholder="e.g., Nandurbar, Pune etc."
               class="form-input min-h-[100px]" required></textarea>
-          </div>
+          </div> -->
 
           <!-- Current Status -->
           <div>
