--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
   </section>
 
   <!-- footer -->
-<footer class="bg-gray-900 text-white py-8">
+<footer class="bg-gray-900 text-white py-4">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center space-y-3">
 
         <div class="text-sm text-gray-400">
@@ -509,14 +509,21 @@
             </p>
             <p>
                 Please review our 
-                <a href="#"  class=" tnc-link-trigger text-blue-600 hover:underline font-medium">Terms and Conditions</a>
-                
+                <a href="#"  class=" tnc-link-trigger text-blue-600 hover:underline font-medium">Terms and Conditions</a> 
             </p>
         </div>
-
-        <p class="text-xs text-gray-500">
-            &copy; 2025 - 360 Tech Mentor. All rights reserved. | Empowering Careers.
-        </p>
+    </div>
+</footer>
+<footer>
+    <div id="powered-by-bar" class="w-full p-0 bg-white text-black text-xs text-center shadow-lg border-t border-gray-300">
+        <a href="https://nandurbarig.com/" target="_blank" class="inline-flex items-center justify-center space-x-1 hover:text-gray-600 transition-colors">
+            <span class="font-bold">Powered by</span>
+            <img 
+                src="/nandurbar_ig.png" 
+                alt="Logo" 
+                class="h-9 w-11 rounded-full object-contain align-middle bg-transparent"
+            >
+        </a>
     </div>
 </footer>
 
