--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <!-- Load Inter Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
-
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8R4CMN3T1F"></script>
   <script>
@@ -752,15 +751,15 @@
     </div>
   </div>
 
-    <!-- 🟢 FLOATING WHATSAPP BUTTON (Animated 3D Effect) 🟢 -->
+    <!-- WHATSAPP BUTTON -->
     <a href="https://wa.me/918237700779?text=Hello%20360%20TechMentor" 
        class="whatsapp-float" 
        target="_blank" 
        rel="noopener noreferrer" 
        aria-label="Chat with us on WhatsApp">
         <img src="/WhatsApp.svg.webp" 
-             alt="WhatsApp Logo" ></a>
-    <!-- 🟢 END WHATSAPP BUTTON 🟢 -->
+             alt="WhatsApp Logo" >
+    </a>
 
   <!-- Module script -->
   <script type="module" src="script.js">
