--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -430,6 +429,26 @@
             </div>
           </div>
         </div>
+
+        <div class="bg-white p-6 md:p-10 rounded-2xl shadow-2xl shadow-rose-300/60 border-4 border-rose-light/50">
+                <p class="text-center text-xl font-Large text-gray-700 mb-6">
+                    <strong>Our Motive🎯</strong>
+                </p>
+                <div class="w-full max-w-xs mx-auto">
+                    <video 
+                        id="unboxingVideo"
+                        controls 
+                        autoplay
+                        class="w-full h-auto object-cover rounded-lg border border-gray-200 shadow-xl"
+                        style="max-height: 80vh;">
+                        <!-- PLACEHOLDER SOURCE - REPLACE THIS WITH YOUR VIDEO'S PUBLIC URL -->
+                        <source src="/360TechMentor for website.mp4" type="video/mp4">
+                        
+                        <!-- Fallback message if video format is not supported -->
+                        Your browser does not support the video tag. Please ensure your video file is hosted correctly.
+                    </video>
+                </div>
+            </div>
       </div>
     </div>
   </section>
