--- a/index.html
+++ b/index.html
@@ -429,9 +429,13 @@
             </div>
           </div>
         </div>
-        <div class="bg-white p-6 md:p-10 rounded-2xl shadow-2xl shadow-rose-300/60 border-4 border-rose-light/50">
-                <p class="text-center text-xl font-Large text-gray-700 mb-6">
-                    <strong>Our Motive🎯</strong>
+
+        <!-- Video -->
+        <div class="bg-white p-6 rounded-xl card-shadow hover:shadow-2xl transition duration-300 animate-slide-up"
+          style="animation-delay: 400ms">
+          <div class="text-center">
+                <p class="text-center text-xl font-medium text-gray-700 mb-6">
+                    Our Motive
                 </p>
                 <div class="w-full max-w-xs mx-auto">
                     <video 
@@ -441,13 +445,14 @@
                         class="w-full h-auto object-cover rounded-lg border border-gray-200 shadow-xl"
                         style="max-height: 80vh;">
                         <!-- PLACEHOLDER SOURCE - REPLACE THIS WITH YOUR VIDEO'S PUBLIC URL -->
-                        <source src="/360TechMentor for website.mp4" type="video/mp4">
+                        <source src="/VN20251108_101310.mp4" type="video/mp4">
                         
                         <!-- Fallback message if video format is not supported -->
                         Your browser does not support the video tag. Please ensure your video file is hosted correctly.
                     </video>
                 </div>
-            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
