--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                         class="w-full h-auto object-cover rounded-lg border border-gray-200 shadow-xl"
                         style="max-height: 80vh;">
                         <!-- PLACEHOLDER SOURCE - REPLACE THIS WITH YOUR VIDEO'S PUBLIC URL -->
-                        <source src="https://drive.google.com/file/d/1zzQ6lnOAI6R3dBnp1mNc2j-sRREaHsyv/view?usp=sharing" type="video/mp4">
+                        <source src="/VN20251108_101310.mp4" type="video/mp4">
                         <!-- Fallback message if video format is not supported -->
                         Your browser does not support the video tag. Please ensure your video file is hosted correctly.
                     </video>
