--- a/index.html
+++ b/index.html
@@ -477,8 +477,9 @@
         </div>
 
         <!-- Video -->
-        <div class="bg-white p-6 rounded-xl card-shadow hover:shadow-2xl transition duration-300 animate-slide-up"
-  style="animation-delay: 400ms">
+        <div class="bg-white p-6 rounded-xl card-shadow hover:shadow-2xl transition duration-300 animate-slide-up 
+     md:col-span-2 md:col-start-1 xl:col-start-2 xl:col-span-1 mx-auto w-full max-w-sm"
+     style="animation-delay: 400ms">
   <div class="text-center">
     <p class="text-center text-xl font-medium text-gray-700 mb-6">
       Our Motive
@@ -495,7 +496,7 @@
       </div>
     </div>
   </div>
-        </div>
+</div>
       </div>
     </div>
   </section>
